--- a/Resume/index.html
+++ b/Resume/index.html
@@ -17,7 +17,64 @@
                 <h1>Jarvis Potter</h1>
                 <h3>Software Engineer</h3>
             </div>
-
+            <div class="main">
+                <div class="left">
+                    <h2>Personal Information</h2>
+                    <p><strong>Name:</strong> Jarvis Potter</p>
+                    <p><strong>Email:</strong> rkkr@pottereterprise.com</p>
+                    <p><strong>Phone:</strong> 1234567890</p>
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>C#/.NET</li>
+                        <li>SQL</li>
+                        <li>Linux</li>
+                    </ul>
+                    <h2>Education</h2>
+                    <h3>University of Missouri-Columbia</h3>
+                    <p>General Studies</p>
+                    <h3>Claims Academy</h3>
+                    <p>C#/.NET</p>
+                </div>
+                <div class="right">
+                    <h2>Work Experiences</h2>
+                    <h3>NYC Commission on Human Rights</h3>
+                    <p><strong>Position:</strong>Inventory Specialist / IT Consultant</p>
+                    <p><strong>Duration:</strong>April 2023 – June 2023</p>
+                    <ul>
+                        <li>Conduct Inventory Policy and Procedures and established a process for recording and identifying all computer
+                            and computer related items managed by the New York City Commission on Human Rights’ (CCHR) Information
+                            Technology (IT) Department. Audited CCHR’s IT Department utilizes an appropriate inventory control and
+                            management process for all current and future equipment. In efforts to account for all IT Assets to ensure all
+                            assets are accounted for and all information within the Inventory Management System (IMS) is accurate in each
+                            of the 5 boroughs.</li>
+                        <li>Completed detailed reports listing requests to technical assistance, steps taken to resolve them and
+                            specific dates of individuals involved.</li>
+                        <li>Act in the initial point of contact for all computers and systems related to concerns from clients and 250
+                            employees.</li>
+                    </ul><br>
+                    <h3>RightSourcing</h3>
+                    <p><strong>Position:</strong>Compliance Coordinator</p>
+                    <p><strong>Duration:</strong>Feb 2022 - March 2023</p>
+                    <ul>
+                        <li>Develops reports and recommendations for appropriate action based on the analysis of gathered
+                            data</li>
+                        <li>Audits compliance of the billable worker as outlined by the individual customer contract
+                            requirements and RightSourcing minimum standards</li>
+                        <li>Updates and maintains the expired/expiring documents report for all billable workers based on
+                            account/workload assigned</li>
+                    </ul>
+                    <h3>Housing Works</h3>
+                    <p><strong>Position:</strong>Data Coordinator</p>
+                    <p><strong>Duration:</strong>Jul 2018 – Jan 2021</p>
+                    <ul>
+                        <li>Compile, sort and verify the accuracy of data before it is entered.</li>
+                        <li>Produce daily, weekly and monthly reports.</li>
+                        <li>Assisted in implement SMART program data to SaleForce</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
     
