--- a/Resume/index.html
+++ b/Resume/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header">
                 <div class="img-area">
-                    <img src="/img/jkpimg.jpeg" alt="JKP">
+                    <img src="img/jkpimg.jpeg" alt="JKP">
 
                 </div>
                 <h1>Jarvis Potter</h1>
