--- a/Resume/index.html
+++ b/Resume/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <title>Jarvis Potter Resume</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
@@ -36,6 +37,9 @@
                     <p>General Studies</p>
                     <h3>Claims Academy</h3>
                     <p>C#/.NET</p>
+                    <h2>Social Links</h2>
+                    <a href="https://github.com/jkp9qd?tab=repositories" class="fa fa-github"></a>
+                    <a href="https://www.linkedin.com/in/jarvis-potter-67a377136/" class="fa fa-linkedin"></a>
                 </div>
                 <div class="right">
                     <h2>Work Experiences</h2>
